Fixed dark mode switch

--- a/public/styles.css
+++ b/public/styles.css
@@ -4,3 +4,8 @@
 
 @import "~@fortawesome/fontawesome-free/css/fontawesome.css";
 @import "~@fortawesome/fontawesome-free/css/solid.css";
+
+/* Center font awesome icons withing a font */
+i[class*="fa-"]::before {
+  margin: auto;
+}
